# AITrack

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
config/: aitracker.yaml
include/: application.hpp  camera_motion.hpp  config.hpp  detector.hpp  kalman_predictor.hpp  nanotracker.hpp  object_motion.hpp  tracker_manager.hpp  visualization.hpp
scripts/: aitracker.sh
src/: application.cpp  camera_motion.cpp  detector.cpp  kalman_predictor.cpp  main.cpp  nanotracker.cpp  object_motion.cpp  tracker_manager.cpp  visualization.cpp
